--- a/popup.html
+++ b/popup.html
@@ -340,6 +340,11 @@
             </div>
         </div>
 
+        <div class="row">
+            <label>战壕页快速买入数额 (BNB/SOL)</label>
+            <input type="number" id="quickBuyAmount" step="0.01" min="0.01" value="0.1">
+        </div>
+
         <button id="saveBtn">保存全局设置</button>
     </div>
 
